MT03 - MD02 Update

--- a/docs/diseno/md02.md
+++ b/docs/diseno/md02.md
@@ -1,72 +1,120 @@
-# MD01 - Proyecto y contexto 
+# MD01 - Proyecto y diseño 
 
-## AoWS & espacios de diseño
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/AtlasWeakSignals_1-1200x900.jpg"></div>
-¿Qué es una señal débil?
+## Introducción 
 
-Una señal débil es un indicador de un problema potencialmente emergente, que puede volverse significativo en el futuro.
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/grafic.png"></div>
- Las señales débiles complementan el análisis de tendencias y pueden utilizarse para ampliar futuros alternativos.
+El objetivo de este módulo es iterar en nuestras propuestas de proyecto y poder utilizar las herramientas ya adquiridas para ir definiendo un poco más nuestro proyecto, al final de este proceso deberemos tener identificadas algunas propuestas de acciones/intervenciones a implementar en los próximos 2 meses.
 
-<A HREF="https://www.sitra.fi/en/articles/what-is-a-weak-signal/#:~:text=A%20weak%20signal%20is%20an%20existing%20thing%20or%20phenomenon%20that,event%20that%20describes%20the%20subject">+info </A>
+<div align="center"><img src="https://i0.wp.com/thedesignsquiggle.com/wp-content/uploads/2023/11/squiggle-labels-outline.png?resize=1002%2C539&ssl=1"></div>
+<A HREF="https://www.sitra.fi/en/articles/what-is-a-weak-signal/#:~:text=A%20weak%20signal%20is%20an%20existing%20thing%20or%20phenomenon%20that,event%20that%20describes%20the%20subject">Process of Design Squiggle </A> By Damien Newman 
 
-## 00.
 
-Lo primero es contar con un Espacio de Diseño. Nos apoyaermos de la plataforma <A HREF="https://miro.com/">miro </A> para poder empezar a diseñar algunos futuros emergentes 🚀
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/espaciodedise%C3%B1o.png"></div>
 
-## 01.
+## Etapa 1: Temática, propuesta de valor y contexto
+
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD02/propuestadevalor.png"></div>
+
+En esta etapa comenzamos por definir la propuesta de valor de nuestro proyecto, para ello debemos identificar cual es el problema que aborda nuestro proyecto, luego escribir la frase que resume la definición de nuestra propuesta de valor.
+
+Frase resumen del problema a solucionar: “La sociedad no tiene facilidad de acceso a herramientas de fabricación digital y mucho menos a usarlas para el reciclaje de plásticos (PET).”
+
+Frase resumen de la propuesta de valor: “Democratizar el acceso a la impresión 3D mediante diferentes kits educativos para el reciclaje de material plástico PET y su posterior aprovechamiento.”
+
+### Referencias
+
+
+ <A HREF="https://www.youtube.com/shorts/KIaS6-DAISU">Process of Reciclaje de botellas PET </A>
+
+ <A HREF="http://recreator3d.com/">Recreator 3D 
+</A>
+
+<A HREF="https://www.hangprinter.org/">Hangprinter
+</A>
+
+<A HREF="https://www.youtube.com/watch?v=rmYH90UypZY">Cable Robot 3D printer
+</A>
+  
+<A HREF="https://mtm.cba.mit.edu/ ">Machines That Make
+</A>
+ 
+
+### Contexto
+
+Información del usuario/comunidad: Estudiantes de primaria y secundaria, docentes y makers aficionados.
+
+Molestias: El usuario/comunidad no dispone muchas propuestas de reciclaje a
+con acciones concretas y resultados a corto plazo.
+
+### Comportamiento
+
+- No se interesa por conocer el destino de sus desechos
+- No tiene acceso a la impresión 3D
+- Desconoce el potencial del PET y sus prestaciones en impresión 3D
+
+### Objetivos 
+
+- Imprimir en 3D
+- Participar en el proceso de reciclaje de botellas PET
+- Potenciar proyectos de clubes de ciencias,
+
+
+### JAM SESSION         
 Comenzaremos por elegir dos cartas a ciegas, como en un tarot, las dos cartas elegidas serán las señales débiles para este ejercicio.
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/se%C3%B1alesdebiles.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD02/jam.png"></div>
 
-Tocó jugar con Technology for equality y Reconfigure your Body, dos cartas muy interesantes que increíblemente parecen estar en armonía con las ideas que han estado rondando en mi cabeza este último tiempo, veamos cómo sigue la dinámica y que surge de todo esto.
+En esta sección debimos seleccionar los diferentes aspectos relacionados en nuestros proyectos y ubicarlos en un plano dónde en un eje tenemos las etiquetas Fácil y Imposible, mientras que en el otro eje tenemos las etiquetas Irrelevante a Relevante.
 
-## 02. 
-Toca colocar las señales débiles elegidas en el Design Space, boca arriba, en las cajas marcadas 01 y 02 respectivamente, y tomé 10 min para analizar las siguientes preguntas.
+Estos son los temas dispuestos en post-it desde el extremo fácil-irrelevante al extremo imposible-relevante:
 
-¿Qué significan para ti?
-¿Qué crees que son?
-
-Si debiera describirlas en una frase creo que sería: “Cómo potenciar las herramientas tecnológicas para que estas promuevan un acceso democrático y como éstas nos pueden asistir como una extensión de nuestro cuerpo”.
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/punteose%C3%B1alesdebiles.png"></div>
-
-## 03.
-
-En este punto nos toca mirar algunas Áreas de Oportunidad que se están usando en Fab Lab Barcelona para prototipar futuros emergentes. Entre estas debimos elegir dos cartas a ciegas nuevamente, y colócalas en el Espacio de Diseño.
-
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/areasdeoportunidad.png"></div>
-
-Ya se puede empezar a ver posibles interconexiones que emergen de la triangulación de las tarjetas, surgen conceptos tales cómo Digital Fabrication, Maker Education, Coding, Design for Social Innovation, STEAM, Prototyping, Aprendizaje Basado en Proyectos y Maker Comunity.
-
-## 04, 05 y 06. 
-
-Toca escoger dos de todos los Conceptos Detonantes dispuestos abajo. Estas serán palabras clave o campos de investigación  con los que estamos trabajando y prototipando en esta sesión. La idea es que estas tarjetas pueden ayudar a encontrar oportunidades o relaciones que no se han pensado aún.
-
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/conceptosdetonantes.png"></div>
-
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/detonantess.png"></div>
-
-Trabajaré con las tarjetas Open source Innovation y Local Materials Recirculation, me imagino a estas tarjetas cohabitando en un escenario de reutilización de materiales de desecho cómo pueden ser las botellas de plástico PET dándole una vuelta de rosca a las tecnologías de fabricación digital existentes disponiendo un kit de prototipado para instituciones educativas/clubes maker de código abierto y de bajo costo.
-
-## 07. Espacio de Diseño multiescalar
-
-En este punto se busca mapear la idea de proyecto de manera multiescalar para encontrar recursos, infraestructura , referentes y posibilidades reales de co-desarrollo e intervención. Se usan las siguientes categorías para organizar la información en diferentes niveles.
-
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/escalas.png"></div>
-
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/espaciomultiescalar.png"></div>
-
-## Ejercicio clase 2 ALTERNATIVE PRESENTS
-
-De las áreas de interés a los presentes alternativos:
+- Tiempo de desechadas las botellas
+- Elección de modelos a imprimir 
+- Colores de las botellas
+- Distribución de kits
+- Producción de los kits 
+- Charlas de concientización 
+- jornadas de reciclaje 
+- Producción de los kits 
+- Alisado de las botellas 
+- Financiamiento
+- Desarrollo de kit CNC Low cost
+- Impresión 3D con PET mediana escala 
 
 
+## Etapa 2: Estrategia de Validación 
 
-Ahora vamos un paso más allá e intentemos describir los presentes alternativos que van surgiendo de nuestro espacio de diseño, experimentos y acciones. Los escribimos en presente y en primera persona ofreciendo como apoyo una serie de ejemplos de todo lo que hemos estado haciendo.
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD02/validacion.png"></div>
 
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/clase2.png" /></div>
+### Estrategia de validación 
 
-Aquí les comparto una previzualización del tablero dónde estuvimos trabajando!
+Charlas de concientización 
+Jornadas de reciclaje
+Distribución de kits
 
-<div align="center"><iframe src="https://miro.com/app/board/uXjVKQD5ciI=/?moveToWidget=3458764587282666720&cot=14" width="800" height="700"></iframe></div>
+### ¿Qué querrías verificar? 
 
+¿Cuál es el nivel de interés? 
+¿A qué edades es más fácil concientizar? 
+¿Es solo recolección o acondicionamiento? 
+¿Quién las organiza? 
+¿Cómo se financiarán?
+¿Cómo se gestionan?
+
+### Evaluación 
+
+Encuestas
+Cuestionarios 
+Entrevistas.
+Estudio de impacto en territorio 
+
+### Reflexión
+
+En particular me quedé con muchas ganas de comenzar a plantear las hipótesis que considero indispensables para poder avanzar en la temática y terminar de corroborar, validar y dimensionar el alcance de mi proyecto. 
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD02/slide.png"></div>
+En relación a la anterior imágen opté por realizar un pequeño primer ejercicio que consistió en probar el marco cortado en el MT03 analizando el comportamiento de un teórico CNC construido con hilo de pesca.  
+
+<div align="center"><img src="https://photos.app.goo.gl/2di2Keez3HnAs91TA"></div>
+<div align="center"><img src="https://photos.app.goo.gl/jWyjaARwYWQFtbgm7"></div>
+
+Y cómo soñar no cuesta nada, soñamos en grande! Al dejar el prototipo en la tarima del laboratorio pude ver en perspectiva la proyección del kit ocupando un volumen cómo el del pasillo de entrada al laboratorio. Quien sabe, quizá algún día logramos implementar una CNC de este porte con estos materiales. 
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD02/perspectiva.png"></div>
