--- a/docs/tecnicos/mt03.md
+++ b/docs/tecnicos/mt03.md
@@ -74,3 +74,24 @@ Por último, es posible que al cargar una imágen png el intérprete de bitmps f
 <div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/logo.png"></div>
 
 <div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/logo2.png"></div>
+
+### Resultados de práctica presencial
+
+En la práctica se logró cortar el MDF de 6 mm en la CNC de corte láser configurando los parámetros de la siguiente manera:
+
+Potencia 100%
+Velocidad de corte 10 mm/s
+
+Esto es debido a que el tubo de CO2 tiene aproximadamente unos 6 años de instalado y el tiempo en que se debe cambiar el tubo de una máquina CNC de CO2 depende del uso y del mantenimiento que se le haya dado. En general, se recomienda cambiar el tubo cada 2-3 años si se utiliza de forma regular.
+
+Para corroborar que la holgura está ajustada al espesor del material elegido (y testear el triple encastre diseñado) se comenzó por cortar un segmento reducido de las partes. 
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/testdeencastre.png"></div>
+
+Una vez corroborada la holgura se procede a realizar el corte de todas las piezas.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/corte_en_cnc.png"></div>
+
+El proceso de ensamble resultó bastante cómodo pero la verdad la estructura no resultó lo suficientemente estable ya que la consigna no permitió usar pegamentos ni tornillos, de todos modos el resultado fue bastante bueno, aceptable.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/testdeestabilidad.mp4"></div>  
