--- a/docs/diseno/md02.md
+++ b/docs/diseno/md02.md
@@ -112,8 +112,8 @@ En particular me quedé con muchas ganas de comenzar a plantear las hipótesis q
 <div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD02/slide.png"></div>
 En relación a la anterior imágen opté por realizar un pequeño primer ejercicio que consistió en probar el marco cortado en el MT03 analizando el comportamiento de un teórico CNC construido con hilo de pesca.  
 
-<div align="center"><img src="https://photos.app.goo.gl/2di2Keez3HnAs91TA"></div>
-<div align="center"><img src="https://photos.app.goo.gl/jWyjaARwYWQFtbgm7"></div>
+<div align="center"><img src="https://photos.google.com/share/AF1QipPu1YVptIkNtdzdY2lYtPG_p0nGr1MdV0636SFx2upJCXLbb_vTXtGJEwyAI9JKrQ?key=SWRUX2p4NTA3bkEtM3ZRcmxRV1M3Z0ljWFRjMC1R"></div>
+<div align="center"><img src="https://photos.google.com/share/AF1QipN1D3nljDjnXQVF4Jy7fPF2SbZkxRXTnMEI7pACuozXaB_2y-K94t8EijpTfPIMAA?key=ellIejBfU3hWbkdIZDRaYzB6aWw0VWdRdzAzVDFn"></div>
 
 Y cómo soñar no cuesta nada, soñamos en grande! Al dejar el prototipo en la tarima del laboratorio pude ver en perspectiva la proyección del kit ocupando un volumen cómo el del pasillo de entrada al laboratorio. Quien sabe, quizá algún día logramos implementar una CNC de este porte con estos materiales. 
 
