--- a/docs/tecnicos/mt03.md
+++ b/docs/tecnicos/mt03.md
@@ -94,4 +94,4 @@ Una vez corroborada la holgura se procede a realizar el corte de todas las pieza
 
 El proceso de ensamble resultó bastante cómodo pero la verdad la estructura no resultó lo suficientemente estable ya que la consigna no permitió usar pegamentos ni tornillos, de todos modos el resultado fue bastante bueno, aceptable.
 
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/testdeestabilidad.mp4"></div>  
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/testdeestabilidad.png"></div>  
