--- a/docs/tecnicos/mt04.md
+++ b/docs/tecnicos/mt04.md
@@ -140,9 +140,10 @@ void calibracionProceso() {
 
 ```
 
-<div align="center"><iframe width="640" height="360" src="https://www.youtube.com/watch?v=2yGvAI3e8X4" title="Parametrización en Onshape" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+<div align="center"><iframe width="640" height="360" src="https://www.youtube.com/embed/2yGvAI3e8X4" title="Prueba pid Arduino, pt100 + hotend 20w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>/div>
 
-03. 
+
+## 03. 
 
 En este punto sumaremos una nueva entrada al circuito, el potenciómetro. Para la conexión conectaremos los pines de afuera a 5v y gnd mientras que el del medio lo conectaremos a la entrada analógica A1 para obtener una lectura entre 0 y 1023. A nivel de código solo basta con agregar en el loop un analogRead(); para obtener la lectura, adicionalmente podemos crear una variable para almacenar la lectura y luego poderla mostrar en pantalla mediante el monitor serial.
 
@@ -151,7 +152,7 @@ En la siguiente gráfica obtenida del ploteo de las variables en el serial plott
 <div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT04/ploteo.png"></div>
 
 
-04. 
+## 04. 
 
 Ahora solo resta poder controlar el motor de pasos Nema 17 para tener todos los componentes necesarios para crear un extrusor controlado por arduino, este sería nuestra segunda salida controlada y con esta estaría completa la consigna. Para poder controlar el motor de pasos vamos a necesitar controlar el driver encargado de excitar las bobinas del motor con el voltaje de trabajo de estos motores pero recibiendo las señales de control de 5v desde el arduino. El driver a utilizar es el <A HREF="https://www.pololu.com/file/0J450/a4988_DMOS_microstepping_driver_with_translator.pdf">A4988</A>.  
 
@@ -181,10 +182,13 @@ void loop() {
     delayMicroseconds(potenciometro); // generamos un retardo con el valor leido del potenciometro
   }
 ```
-<div align="center"><iframe width="640" height="360" src="https://www.youtube.com/shorts/a4I6wSzQyYo" title="Parametrización en Onshape" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+
+<div align="center"><iframe width="315" height="560" src="https://youtube.com/embed/a4I6wSzQyYo" title="Prueba de funcionamiento - Manivela" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
 
-05. La unificación
+
+
+## 05. La unificación
 
 Bueno, después de dar unas buenas vueltas al asunto, he intentado unificar el sistema de control de temperatura y el control de motor con potenciómetro fracasando con total éxito. 
 
