--- a/docs/innovacion/mi03.md
+++ b/docs/innovacion/mi03.md
@@ -7,3 +7,45 @@ MI01 Innovación abierta y distribuida
 MI02 Desarrollo sostenible y economía circular 
 
 ## MI03 Emprendimiento.
+
+### Clase 01.
+
+Objetivos de aprendizaje: Desarrollar una mentalidad emprendedora a través de la internalización de habilidades, operaciones y comportamientos estratégicos necesarios para el éxito en el mundo emprendedor.
+
+Estructura: Curso online dividido en 4 módulos secuenciales con contenido específico, recursos teóricos, lecturas, ejercicios y actividades en un foro.
+
+Requisitos: Completar tareas de cada módulo para avanzar. Evaluación final obligatoria.
+
+Aprobación: Cumplir con tareas, participar en foros y entregar trabajo final para aprobar el curso.
+
+
+La primera acción que debe tomar un futuro emprendedor es conocerse a sí mismo para identificar un punto de partida personal en su actitud emprendedora. Debe hacer un diagnóstico individual, siendo honesto y realista, sobre su actitud, personalidad e inteligencia para afrontar diversas situaciones. Además, debe identificar habilidades, capacidades y competencias esenciales para desarrollar.
+
+Para ello realizamos un 
+[test de personalidad](https://www.16personalities.com/es/resultados/entp-a/x/1ry0t7lo5).
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MI03/test_personalidad.png"></div>
+
+Seguido de esto debimos completar un segundo test de personalidad como un complemento de auto-conocimiento emprendedor.
+
+<div align="center"><iframe src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MI03/Herramienta_Auto_conocimiento_Emprendedor (1).pdf" width="600" height="500" style="border: none;">   
+</iframe></div>
+
+Por último debimos realizar el test CCE (Competence Assessment Test) desarrollado por David McClelland, el cuál refiere a una metodología de evaluación de competencias basadas en el modelo de competencias, que busca identificar las capacidades, habilidades y comportamientos que llevan al éxito en un entorno laboral específico. 
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MI03/testCCE.png"></div>
+
+[Descargar resultados testCCE](https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MI03/TEST_CCE_UTEC_ARIAL.xlsx)
+
+En el curso online y autogestionado que tuvo inicio el lunes 1 de julio en la plataforma EDU se abordaron con éxito conceptos fundamentales para fomentar el espíritu emprendedor. Gracias a la flexibilidad de conectarnos en el horario que mejor se ajustara a nuestras necesidades fue posible avanzar a nuestro propio ritmo, con una dedicación total estimada de unas 15 horas. Fue una oportunidad invaluable para adquirir conocimientos clave y potenciar la actitud emprendedora de cada uno.
+
+
+### Clase 02.
+
+En la segunda parte del módulo, participamos del curso GENERACIÓN DE IDEAS DE NEGOCIO del programa de emprendimientos de UtecInnova. El propósito del curso es brindar herramientas para la generación e identificación de oportunidades de negocios.
+
+Pensado para personas que quieren generar ideas para desarrollar un emprendimiento, tengan una idea sin validar o tengan interés en llevar adelante un emprendimiento.
+
+Constó de dos jornadas sincrónicas virtuales y obteniendo como entregable final un lienzo Lean Canvas. Aquí se puede observar el resultado obtenido: 
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MI03/canva.png"></div>
