--- a/docs/tecnicos/mt05.md
+++ b/docs/tecnicos/mt05.md
@@ -1,7 +1,7 @@
 
 # MT05 - Impresión y Escaneo 3D 
 
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT05/impre3d.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT05/impre3d.jpg"></div>
 
 ## Introducción 
 
@@ -16,31 +16,60 @@ El escaneo 3D, en contraste, es la tecnología que convierte objetos físicos en
 La impresión 3D tiene sus raíces en la década de 1980, con la invención de la estereolitografía por Chuck Hull. Desde entonces, se han desarrollado múltiples tecnologías y técnicas, incluyendo FDM (Fused Deposition Modeling), SLS (Selective Laser Sintering) y SLA (Stereolithography Apparatus). El escaneo 3D también ha avanzado significativamente, desde los primeros escáneres láser hasta las soluciones modernas que utilizan fotogrametría y escaneo de luz estructurada.
 
 **3. Tecnologías de Impresión 3D**
+
 - **FDM (Fused Deposition Modeling)**: Utiliza filamentos de plástico que se funden y extruyen capa por capa.
+
 - **SLA (Stereolithography)**: Usa resinas líquidas que se curan mediante un láser para formar capas sólidas.
+
 - **SLS (Selective Laser Sintering)**: Emplea un láser para fusionar polvo de material, creando capas densas que pueden ser de plástico, metal u otros compuestos.
 
-<div align="center"><blockquote class="twitter-tweet"><p lang="es" dir="ltr"><a href="https://twitter.com/hashtag/UTEC?src=hash&amp;ref_src=twsrc%5Etfw">#UTEC</a> presente en la <a href="https://twitter.com/Expoactiva?ref_src=twsrc%5Etfw">@Expoactiva</a> 2023 🙌🏻<br>Recibimos a <a href="https://twitter.com/LuisLacallePou?ref_src=twsrc%5Etfw">@LuisLacallePou</a> en nuestro stand con un escaneo 3D y <a href="https://twitter.com/andresm_uy?ref_src=twsrc%5Etfw">@andresm_uy</a> de <a href="https://twitter.com/hashtag/UTECSuroeste?src=hash&amp;ref_src=twsrc%5Etfw">#UTECSuroeste</a> le presentó proyectos de nuestro LabA 🤩<br><br>Hasta el 18/3 visitanos en la Expo Activa y conocé nuestra universidad de cerca 😍 <a href="https://twitter.com/RuralSoriano?ref_src=twsrc%5Etfw">@RuralSoriano</a> <a href="https://t.co/zbue1n5hb9">pic.twitter.com/zbue1n5hb9</a></p>&mdash; Universidad Tecnológica (@UTECuy) <a href="https://twitter.com/UTECuy/status/1635701065839517696?ref_src=twsrc%5Etfw">March 14, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
+
 
 **4. Tecnologías de Escaneo 3D**
-- **Escaneo láser**: Utiliza un láser para medir distancias con precisión, creando nubes de puntos que representan la geometría del objeto.
-- **Escaneo de luz estructurada**: Proyecta patrones de luz sobre el objeto y captura las deformaciones para generar un modelo 3D.
-- **Fotogrametría**: Consiste en tomar múltiples fotografías de un objeto desde diferentes ángulos y procesarlas mediante software para reconstruir su forma tridimensional.
+
+- **Escaneo láser**:
+
+ Utiliza un láser para medir distancias con precisión, creando nubes de puntos que representan la geometría del objeto.
+
+- **Escaneo de luz estructurada**:
+
+ Proyecta patrones de luz sobre el objeto y captura las deformaciones para generar un modelo 3D.
+
+- **Fotogrametría**: 
+
+Consiste en tomar múltiples fotografías de un objeto desde diferentes ángulos y procesarlas mediante software para reconstruir su forma tridimensional.
+
+<div align="center"><blockquote class="twitter-tweet"><p lang="es" dir="ltr"><a href="https://twitter.com/hashtag/UTEC?src=hash&amp;ref_src=twsrc%5Etfw">#UTEC</a> presente en la <a href="https://twitter.com/Expoactiva?ref_src=twsrc%5Etfw">@Expoactiva</a> 2023 🙌🏻<br>Recibimos a <a href="https://twitter.com/LuisLacallePou?ref_src=twsrc%5Etfw">@LuisLacallePou</a> en nuestro stand con un escaneo 3D y <a href="https://twitter.com/andresm_uy?ref_src=twsrc%5Etfw">@andresm_uy</a> de <a href="https://twitter.com/hashtag/UTECSuroeste?src=hash&amp;ref_src=twsrc%5Etfw">#UTECSuroeste</a> le presentó proyectos de nuestro LabA 🤩<br><br>Hasta el 18/3 visitanos en la Expo Activa y conocé nuestra universidad de cerca 😍 <a href="https://twitter.com/RuralSoriano?ref_src=twsrc%5Etfw">@RuralSoriano</a> <a href="https://t.co/zbue1n5hb9">pic.twitter.com/zbue1n5hb9</a></p>&mdash; Universidad Tecnológica (@UTECuy) <a href="https://twitter.com/UTECuy/status/1635701065839517696?ref_src=twsrc%5Etfw">March 14, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
 
 **5. Aplicaciones**
 
 La impresión y escaneo 3D tienen amplias aplicaciones en diversas disciplinas:
-- **Medicina**: Creación de implantes personalizados, modelos anatómicos para cirugía y prótesis a medida.
-- **Arquitectura**: Prototipado de maquetas y elementos arquitectónicos complejos.
-- **Industria**: Fabricación de piezas únicas, herramientas y componentes en producción.
-- **Entretenimiento**: Creación de figuras, modelos y escenografías personalizadas.
+
+- **Medicina**: 
+
+Creación de implantes personalizados, modelos anatómicos para cirugía y prótesis a medida.
+
+- **Arquitectura**: 
+
+Prototipado de maquetas y elementos arquitectónicos complejos.
+
+- **Industria**:
+
+ Fabricación de piezas únicas, herramientas y componentes en producción.
+
+- **Entretenimiento**: 
+
+Creación de figuras, modelos y escenografías personalizadas.
 
 **6. Beneficios y Desafíos**
+
 **Beneficios**:
+
 - Personalización: Posibilidad de crear objetos únicos adaptados a las necesidades específicas de los usuarios.
 - Reducción de costos y tiempos de producción: Minimizando el desperdicio de material y acelerando el proceso de diseño.
   
 **Desafíos**:
+
 - Limitaciones de material: La disponibilidad de materiales adecuados para ciertas aplicaciones puede ser un obstáculo.
 - Calidad de impresión: Alcanzar un nivel de detalle y acabado superficial deseado puede requerir ajustes técnicos y de diseño.
 
