--- a/docs/tecnicos/mt05.md
+++ b/docs/tecnicos/mt05.md
@@ -96,12 +96,12 @@ Estas impresoras nos permiten mediante este entorno monitorear los procesos de i
     <div class="carousel-inner">  
         <div class="carousel-item active">  
             <div class="video-container">  
-                <iframe src="https://drive.google.com/file/d/1KHNdlB1YsIFUMXJHP21e-_kgeg_2Dc3q/preview" frameborder="0" allowfullscreen></iframe>  
+                <iframe src="https://drive.google.com/file/d/1KHNdlB1YsIFUMXJHP21e-_kgeg_2Dc3q/preview" frameborder="0" allowfullscreen></iframe>    
             </div>  
         </div>  
         <div class="carousel-item">  
             <div class="video-container">  
-                <iframe src="https://drive.google.com/file/d/1KHNbQdBPbNzerb8r32G0izXJKgYQXaDW/preview" frameborder="0" allowfullscreen></iframe>  
+                <iframe src="https://drive.google.com/file/d/1KHNbQdBPbNzerb8r32G0izXJKgYQXaDW/preview" frameborder="0" allowfullscreen></iframe>   
             </div>  
         </div>  
         <div class="carousel-item">  
@@ -109,15 +109,14 @@ Estas impresoras nos permiten mediante este entorno monitorear los procesos de i
                 <iframe src="https://drive.google.com/file/d/1LpFF-xKaNxKgrkV8mY8RuKCl7mmjRRbj/preview" frameborder="0" allowfullscreen></iframe>  
             </div>  
         </div>  
-        <div class="carousel-item">  
-              <div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT05/tamaño.jpg"></div>
-            </div>  
         </div>  
+        <div class="carousel-item">  
+            <img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT05/tamaño.jpg" class="d-block w-100" alt="Descripción de la imagen">  
+        </div>
         <div class="carousel-item">  
             <div class="video-container">  
                 <iframe src="https://drive.google.com/file/d/1Jvcg1PpshbiNHh2IL5jVPsX0B6RPJglz/preview" frameborder="0" allowfullscreen></iframe>  
-            </div>  
-        </div>
+            </div>    
     </div>  
     <a class="carousel-control-prev" href="#videoCarousel" role="button" data-slide="prev">  
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>  
@@ -143,6 +142,11 @@ Estas impresoras nos permiten mediante este entorno monitorear los procesos de i
         left: 0;  
         width: 100%;  
         height: 100%;  
+    }  
+
+    .carousel-item img {  
+        width: 100%;  
+        height: auto; /* Mantiene la proporción de la imagen */  
     }  
 </style>  
 
